objects/FeedTrackingObject__c.object
<CustomObject>
    <fields>
        <fullName>Field10__c</fullName>
        <label>Field10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field11__c</fullName>
        <label>Field11</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Field12__c</fullName>
        <label>Field12</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>FeedTrackingObject</label>
    <nameField>
        <label>FeedTrackingObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FeedTrackingObject</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>